[tool.poetry]
name = "demo"
version = "0.1.0"
description = "demonstration"
authors = ["Ron Chang <ron.hsien.chang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.13"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
neovim = "^0.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
